# ibkr-ai-agent

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/ibkr_ai_agent/: __init__.py  agent.py  cli.py  mcp_server.py
tests/: test_agent.py  test_cli.py  test_mcp_server.py
