[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ibkr-ai-agent"
version = "0.1.0"
description = "AI agent for interacting with Interactive Brokers assets through natural language"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "langchain>=0.0.200",
    "langchain-community>=0.0.10",
    "boto3>=1.26.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "ib_insync>=0.9.70",  # Interactive Brokers API wrapper
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.270"
]

[project.scripts]
ibkr-agent = "ibkr_ai_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ibkr_ai_agent"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=ibkr_ai_agent --cov-report=term-missing"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ibkr_ai_agent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
target-version = "py39"
